[package]
name = "oauth-1a"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"
description = "OAuth 1.0a client implementation"
repository = "https://github.com/leo60228/oauth-1a"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["oauth", "auth", "authentication", "client"]
categories = ["authentication", "cryptography", "network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1.0"
rand = "0.7.3"
hmac = "0.7.1"
sha-1 = "0.8.2"
http-types = { version = "2.0.1", default-features = false }
base64 = "0.12.1"
serde = { version = "1.0.110", features = ["derive"] }
serde_urlencoded = "0.6.1"

[dev-dependencies]
attohttpc = "0.13.0"
